--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "gsap": "^3.12.7",
+    "include-media": "^2.0.0",
     "lenis": "^1.1.20",
     "nuxt": "^3.15.2",
-    "sass": "^1.83.4",
     "vue": "latest",
     "vue-i18n": "^10.0.5",
     "vue-router": "latest"
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@nuxtjs/prismic": "^4.0.0",
     "@slicemachine/adapter-nuxt": "^0.3.65",
+    "sass": "^1.83.4",
     "slice-machine-ui": "^2.12.2"
   }
 }
