--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "slicemachine": "start-slicemachine"
-  },
-  "dependencies": {
-    "gsap": "^3.12.7",
-    "include-media": "^2.0.0",
-    "lenis": "^1.3.4",
-    "nuxt": "^3.15.2",
-    "vue": "latest",
-    "vue-i18n": "^10.0.5",
-    "vue-router": "latest"
-  },
-  "devDependencies": {
-    "@nuxtjs/prismic": "^4.0.0",
-    "@slicemachine/adapter-nuxt": "^0.3.65",
-    "sass": "^1.83.4",
-    "slice-machine-ui": "^2.12.2"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"slicemachine": "start-slicemachine"
+	},
+	"dependencies": {
+		"gsap": "^3.12.7",
+		"include-media": "^2.0.0",
+		"lenis": "^1.3.4",
+		"nuxt": "^3.15.2",
+		"vue": "^3.4.21",
+		"vue-i18n": "^10.0.5",
+		"vue-router": "^4.3.0"
+	},
+	"devDependencies": {
+		"@nuxtjs/prismic": "^4.0.0",
+		"@slicemachine/adapter-nuxt": "^0.3.65",
+		"sass": "^1.76.0",
+		"slice-machine-ui": "^2.12.2"
+	}
 }
