--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"slicemachine": "start-slicemachine"
 	},
 	"dependencies": {
+		"@studio-freight/lenis": "^1.0.42",
 		"gsap": "^3.12.7",
 		"include-media": "^2.0.0",
 		"lenis": "^1.3.4",
