--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"gsap": "^3.12.7",
 		"include-media": "^2.0.0",
 		"lenis": "^1.3.4",
+		"nodemailer": "^7.0.3",
 		"nuxt": "^3.15.2",
 		"vue": "^3.4.21",
 		"vue-i18n": "^10.0.5",
