--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@extractus/opengraph": "^0.4.2",
+		"@nuxtjs/color-mode": "^3.5.2",
 		"@studio-freight/lenis": "^1.0.42",
 		"gsap": "^3.12.7",
 		"include-media": "^2.0.0",
