--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@extractus/opengraph": "^0.4.2",
 		"@nuxtjs/color-mode": "^3.5.2",
 		"@studio-freight/lenis": "^1.0.42",
+		"date-fns": "^4.1.0",
 		"gsap": "^3.12.7",
 		"he": "^1.2.0",
 		"include-media": "^2.0.0",
